# Embedded-Systems-HW

./: .gitignore  prj.conf
boards/: stm32f746g_disco.overlay
hw/: prj.conf
hw/boards/: stm32f746g_disco.overlay
hw/src/: hijab.c  lol.c  main.c
lab9/: CMakeLists.txt  Kconfig  dataset.h5  prj.conf
lab9/models/: cnn_model.cpp  cnn_quantized_model.h  cnn_some_quantized_model.cpp  cnn_some_quantized_model.h  dense_model.cpp  dense_model.h  dense_quantized_model.cpp  dense_some_quantized_model.cpp  dense_some_quantized_model.h
lab9/models/cnn/: cnn_quantized_model.cpp
lab9/models/dense/: dense_quantized_model.h
lab9/posesData/: plotting.py  prepare_data.py
lab9/src/: main.c  main.cpp  main_functions.cpp  main_functions.h  mainold.c
plotting/: pyvenv.cfg
src/: connections.txt  main.c
